# kynesis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.specify/memory/: constitution.md
app/: main.py
app/assessment/: image.py  ocr.py  router.py  schemas.py  services.py  transcription.py
app/core/: ai_provider.py  auth.py  config.py  database.py  errors.py
app/insights/: router.py  schemas.py  services.py
app/knowledge_base/: parsers.py  router.py  schemas.py  services.py
app/profile/: models.py  router.py  schemas.py  services.py
app/scorecards/: router.py  schemas.py
artifacts/: test.txt
specs/001-email-auth-profile/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-email-auth-profile/checklists/: requirements.md
specs/001-email-auth-profile/contracts/: api.md
specs/002-assessment-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-assessment-engine/checklists/: requirements.md
specs/002-assessment-engine/contracts/: assessment.md  insights.md  knowledge-base.md
specs/003-reasoning-aggregation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-image-assessment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/assessment/: test_router.py  test_services.py
tests/core/: test_auth.py
tests/insights/: test_router.py
tests/knowledge_base/: test_router.py
tests/profile/: test_router.py  test_services.py
(+4 files in other folders)
